# Pilatus

./: README.md  installExampleAppsBE.sh  installTalosCloud.sh
TalosAndroid/TalosAvaApp/: avaDBShare.sql  settings.gradle
TalosAndroid/TalosAvaApp/app/: build.gradle  proguard-rules.pro
TalosAndroid/TalosAvaApp/app/src/main/: AndroidManifest.xml
TalosAndroid/TalosAvaApp/app/src/main/res/layout/: activity_data_daily.xml  activity_display_overview.xml  activity_friends.xml  activity_main.xml  activity_my_shares.xml  activity_oval_info.xml  activity_sync_actibity.xml  content_sync_actibity.xml
TalosAndroid/TalosAvaApp/app/src/main/res/menu/: menu_main.xml
TalosAndroid/TalosAvaApp/app/src/main/res/values/: colors.xml  strings.xml
TalosAndroid/TalosAvaApp/gradle/wrapper/: gradle-wrapper.properties
TalosAndroid/TalosFitbitApp/: fitbitDB.sql  local.properties
TalosAndroid/TalosFitbitApp/app/: build.gradle
TalosAndroid/TalosFitbitApp/app/src/main/: AndroidManifest.xml
TalosAndroid/TalosFitbitApp/app/src/main/res/layout/: activity_cloud_select.xml  activity_data_daily.xml  activity_fitbit_auth.xml  activity_main.xml  activity_test_chart.xml  list_cloud_layout.xml
TalosAndroid/TalosFitbitApp/app/src/main/res/menu/: menu_test_swipe.xml
TalosAndroid/TalosFitbitApp/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
TalosAndroid/TalosFitbitApp/gradle/wrapper/: gradle-wrapper.properties
TalosAndroid/TalosModuleApp/: local.properties  settings.gradle
TalosAndroid/TalosModuleApp/app/: SensorAPP.sql  build.gradle  proguard-rules.pro
TalosAndroid/TalosModuleApp/app/src/main/: AndroidManifest.xml
TalosAndroid/TalosModuleApp/app/src/main/res/layout/: activity_ble.xml  activity_data.xml  activity_data_sensor.xml  activity_main.xml  activity_sensor.xml  activity_sensor_main.xml  (+6 more)
TalosAndroid/TalosModuleApp/talosmodule/: TestSetUp.sql  build.gradle  proguard-rules.pro
TalosAndroid/TalosModuleApp/talosmodule/jnifiles/: build.sh
TalosAndroid/TalosModuleApp/talosmodule/jnifiles/jni/: Android.mk  Application.mk  eccryptofinal.c  gamalcryptofinal.c  paillier.c  pre-hom.c  pre-hom.h  proxy-re-wrapper.c
TalosAndroid/TalosModuleApp/talosmodule/src/main/: AndroidManifest.xml
TalosCiphers/RelicProxyReEncAndroid/app/: build.gradle  proguard-rules.pro
TalosCiphers/RelicProxyReEncAndroid/app/jnifiles/: build.sh
TalosCiphers/RelicProxyReEncAndroid/app/jnifiles/jni/: Android.mk  Application.mk  bench_mul_openssl.c  bench_mul_relic.c  ecelgamal-relic.h  ecelgamal_relic_wrapper.c
TalosCiphers/RelicProxyReEncAndroid/app/jnifiles/jni/include/: gmp.h
TalosCiphers/RelicProxyReEncAndroid/app/src/main/: AndroidManifest.xml
TalosCiphers/ecelgamal-relic/: CMakeLists.txt  benchmark_ecelgamal_relic.cpp  benchmark_ecelgamal_udf.cpp  createUDF.sql  ecelgamal-relic.c  ecelgamal_relic_udf.c  ecelgamal_relic_udf_crt.c  main.cpp
TalosCiphers/ecelgamal-relic/includes/: ap_base64.h
TalosCiphers/key-hom/: CMakeLists.txt  benchmark_key_hom_udf.cpp  key-hom-udf.c  key_hom.c  key_hom.h  key_hom_udf_create.sql  run_bench.sh  testing.cpp
TalosCiphers/pollardkangaroo/: CMakeLists.txt  PollardKang.c  PollardKang.h  main.cpp
TalosCiphers/pre-relic/: CMakeLists.txt  benchamark_udf.cpp  benchamark_udf_plain.cpp  benchmark_pre.cpp  main.cpp  pre-hom.c  pre-hom.h  pre-relic-udf.c  proxy-re-wrapper.c  run_benchmarks_udf.sh  test_pre_udf.h  test_relic_udf.cpp
TalosCloud/: README.md  TestmOPE.sql  buildANT.sh  pre_functions.sql  talos.properties  taloscloud.xml  talosexample.properties  taloswebservice.xml  test_db_pre.sql
TalosCloud/UDFcode/: CRT_GAMAL_UDF.c  CRT_GAMAL_UDF_160.c  CRT_GAMAL_UDF_224.c  ECElgamalUDF.c  PRE_UDF.c  PaillierUDF.c  compileLinux.sh  compileMac.sh  createUDF.sql  createUDFBench.sql  mOPEUDF.c  pre-relic-udf.c  pre_pairing_gen.c
TalosCloud/sql_scripts/: DBAuth.sql  TestSetup.sql
TalosCloud/src/auth/: DebugAuthenticator.java  ITokenVerifier.java  ServerGoogleAuth.java  TokenIDAuthenticator.java  TokenVerifierFactory.java
TalosCloud/src/crypto/: CRTPreRelic.java  IPRNG.java  PRERelic.java  PRNGImpl.java  TestPRE.java
TalosCloud/src/database/: APIException.java  CommandDescription.java  DBAccessAPI.java  DBAccessAuthenticate.java  ImOPEDBInterface.java  MySqlConnectionPool.java  ProxyReencryptor.java  ResultSetSerializer.java  mOPEDBInterface.java
TalosCloud/src/main/: TalosApplication.java
TalosCloud/src/mope/: DBUpdater.java  mOPEEncryptionResult.java  mOPEException.java  mOPEInteractionState.java  mOPEInteractionTree.java  mOPEJob.java  mOPETreeIndex.java  mOPETreeLock.java  mOPEUpdateTask.java
TalosCloud/src/mope/messages/: mOPEClientAnswer.java  mOPEClientCipher.java  mOPEClientStepMessage.java  mOPEMessage.java  mOPEMsgFactory.java  mOPEResponseMessage.java  mOPEResultMessage.java
TalosCloud/src/mopetree/: ChangeTracker.java  Tuple.java  mOPEDebugClient.java  mOPETreeHelper.java  mOPETreeWalker.java  mOPEUpdateSummary.java
TalosCloud/src/resources/: BatchCommandResource.java  ClientShareResource.java  CommandResource.java  DebugRegisterResource.java  ProtectedResource.java  RegisterResource.java  SharableUsersResource.java  SharedAccessUsersResource.java  SharedUsersResource.java  mOPEResource.java
TalosCloud/src/testmope/: TestmOPEState.java  TestmOPETree.java
TalosCloud/src/util/: ErrorResponses.java  MessageUtil.java  SystemLogger.java  SystemUtil.java  User.java
TalosCloud/web/WEB-INF/: web.xml
TalosHelper/: deployTalosBEApplication.sh  installCloudBackend.sh  install_relic.sh
TalosHelper/compile_android_relic_scripts/: arm-128-pbc-gmp.sh  armdroid-pbc-80-gmp.sh  compile_android_gmp.sh  complieOpenSSLAndroid.sh
(+227 files in other folders)
